syntax = "proto3";

package order;

option go_package = "./order";

// ========================================
// Order Service Definition
// ========================================
// Handles order creation, management, and status updates

service Order {
  // Create new order from cart
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);

  // Get order detail
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);

  // List user's orders with pagination
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);

  // Cancel order (only if not paid)
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);

  // Update order status (called by payment service, shipping system)
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);

  // Get order by order number
  rpc GetOrderByNo(GetOrderByNoRequest) returns (GetOrderByNoResponse);
}

// ========================================
// Messages
// ========================================

message CreateOrderRequest {
  int64 user_id = 1;
  repeated OrderItem items = 2;
  string address = 3;
  string phone = 4;
  string remark = 5;
}

message CreateOrderResponse {
  int64 order_id = 1;
  string order_no = 2;         // Human-readable order number
  double total_amount = 3;
}

message GetOrderRequest {
  int64 order_id = 1;
  int64 user_id = 2;           // Verify ownership
}

message GetOrderResponse {
  OrderInfo order = 1;
}

message ListOrdersRequest {
  int64 user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
  int32 status = 4;            // 0 = all, 1-5 = specific status
}

message ListOrdersResponse {
  int64 total = 1;
  repeated OrderInfo orders = 2;
}

message CancelOrderRequest {
  int64 order_id = 1;
  int64 user_id = 2;
}

message CancelOrderResponse {
  bool success = 1;
  string message = 2;          // Error message if failed
}

message UpdateOrderStatusRequest {
  int64 order_id = 1;
  int32 status = 2;            // New status
  int64 operated_at = 3;       // Timestamp of status change
}

message UpdateOrderStatusResponse {
  bool success = 1;
}

message GetOrderByNoRequest {
  string order_no = 1;
}

message GetOrderByNoResponse {
  OrderInfo order = 1;
}

// Order item
message OrderItem {
  int64 product_id = 1;
  string name = 2;
  double price = 3;
  int64 quantity = 4;
  string image = 5;
}

// Complete order information
message OrderInfo {
  int64 id = 1;
  int64 user_id = 2;
  string order_no = 3;
  double total_amount = 4;
  int32 status = 5;            // 1:pending, 2:paid, 3:shipped, 4:completed, 5:cancelled
  string address = 6;
  string phone = 7;
  string remark = 8;
  repeated OrderItem items = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
  int64 paid_at = 12;
  int64 shipped_at = 13;
  int64 completed_at = 14;
}
